fix(share): Share not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -1096,7 +1096,7 @@ h3.four-up--title {
   }
 }
 .share-component--item:hover {
-  background-color: rgba(240, 239, 239, 0.8039215686);
+  background-color: rgba(240, 239, 239, 0.6705882353);
 }
 
 header {
