--- a/sass/components/_share.scss
+++ b/sass/components/_share.scss
@@ -22,7 +22,7 @@
     transition: 0.3s;
     @include rounded(4px);
     &:hover {
-      background-color: #f0efefcd;
+      background-color: #f0efefab;
     }
   }
 }
